--- a/MyD2DEngine/DemoGameApp/DemoGameApp.vcxproj.filters
+++ b/MyD2DEngine/DemoGameApp/DemoGameApp.vcxproj.filters
@@ -23,5 +23,8 @@
     <ClCompile Include="DemoGameApp.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
+    <ClCompile Include="Game.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
