--- a/MyD2DEngine/MyD2DEngine/MyD2DEngine.vcxproj
+++ b/MyD2DEngine/MyD2DEngine/MyD2DEngine.vcxproj
@@ -142,11 +142,17 @@
     <ClInclude Include="Application.h" />
     <ClInclude Include="D2DRenderManager.h" />
     <ClInclude Include="framework.h" />
+    <ClInclude Include="GameTime.h" />
+    <ClInclude Include="Input.h" />
     <ClInclude Include="pch.h" />
+    <ClInclude Include="Singleton.h" />
+    <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
     <ClCompile Include="D2DRenderManager.cpp" />
+    <ClCompile Include="GameTime.cpp" />
+    <ClCompile Include="Input.cpp" />
     <ClCompile Include="MyD2DEngine.cpp" />
     <ClCompile Include="pch.cpp">
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">Create</PrecompiledHeader>
@@ -154,6 +160,7 @@
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">Create</PrecompiledHeader>
       <PrecompiledHeader Condition="'$(Configuration)|$(Platform)'=='Release|x64'">Create</PrecompiledHeader>
     </ClCompile>
+    <ClCompile Include="Transform.cpp" />
   </ItemGroup>
   <ItemGroup>
     <None Include="cpp.hint" />
