이미지 회전 완료

--- a/.gitignore
+++ b/.gitignore
@@ -1043,3 +1043,7 @@ dkms.conf
 *.uf2
 # Raspberry Pi Pico disassembler file
 *.dis
+
+# ignore build file
+MyD2DEngine\MyD2DEngine\x64
+#D:\lsh\Github\DirectX2D_1\MyD2DEngine\MyD2DEngine\x64\Debug\MyD2DEngine.tlog\Lib-link.read.1.tlog
