BitmapRenderer 컴포넌트 추가중

--- a/MyD2DEngine/MyD2DEngine/MyD2DEngine.vcxproj
+++ b/MyD2DEngine/MyD2DEngine/MyD2DEngine.vcxproj
@@ -140,16 +140,19 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="Application.h" />
+    <ClInclude Include="BitmapRenderer.h" />
     <ClInclude Include="D2DRenderManager.h" />
     <ClInclude Include="framework.h" />
     <ClInclude Include="GameTime.h" />
     <ClInclude Include="Input.h" />
+    <ClInclude Include="IRenderer.h" />
     <ClInclude Include="pch.h" />
     <ClInclude Include="Singleton.h" />
     <ClInclude Include="Transform.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="Application.cpp" />
+    <ClCompile Include="BitmapRenderer.cpp" />
     <ClCompile Include="D2DRenderManager.cpp" />
     <ClCompile Include="GameTime.cpp" />
     <ClCompile Include="Input.cpp" />
