--- a/MyD2DEngine/MyD2DEngine/MyD2DEngine.vcxproj.filters
+++ b/MyD2DEngine/MyD2DEngine/MyD2DEngine.vcxproj.filters
@@ -39,6 +39,12 @@
     <ClInclude Include="GameTime.h">
       <Filter>헤더 파일</Filter>
     </ClInclude>
+    <ClInclude Include="IRenderer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
+    <ClInclude Include="BitmapRenderer.h">
+      <Filter>헤더 파일</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="MyD2DEngine.cpp">
@@ -60,6 +66,9 @@
       <Filter>소스 파일</Filter>
     </ClCompile>
     <ClCompile Include="GameTime.cpp">
+      <Filter>소스 파일</Filter>
+    </ClCompile>
+    <ClCompile Include="BitmapRenderer.cpp">
       <Filter>소스 파일</Filter>
     </ClCompile>
   </ItemGroup>
